test/typecheck/fail/enum_shadow_reg.sail
default Order dec

register A : int = 1

enum Y = {A, D}
